--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geolocator: ^9.0.1
   geocoding: ^2.0.4
   shared_preferences: ^2.0.15
+  flutter_staggered_grid_view: ^0.4.1
 
 dev_dependencies:
   flutter_test:
