--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   geocoding: ^2.0.4
   shared_preferences: ^2.0.15
   flutter_staggered_grid_view: ^0.4.1
+  fluttertoast: ^8.0.9
+  number_inc_dec: ^0.8.0
 
 dev_dependencies:
   flutter_test:
